# SaProt

./: LICENSE  README.md  __init__.py  environment.sh  requirements.txt
ColabSaProt/: pyproject.toml
ColabSaProt/saprot/config/: Default.yaml  config_dict.py
ColabSaProt/saprot/config/ClinVar/: esm2.yaml  saprot.yaml
ColabSaProt/saprot/config/DeepLoc/cls10/: esm2.yaml  saprot.yaml
ColabSaProt/saprot/config/DeepLoc/cls2/: esm2.yaml  saprot.yaml
ColabSaProt/saprot/config/EC/: esm2.yaml  saprot.yaml
ColabSaProt/saprot/config/GO/BP/: esm2.yaml  saprot.yaml
ColabSaProt/saprot/config/GO/CC/: esm2.yaml  saprot.yaml
ColabSaProt/saprot/config/HumanPPI/: esm2.yaml  saprot.yaml
ColabSaProt/saprot/config/MetalIonBinding/: esm2.yaml  saprot.yaml
ColabSaProt/saprot/config/ProteinGym/: esm2.yaml  saprot.yaml
ColabSaProt/saprot/config/Thermostability/: esm2.yaml  saprot.yaml
ColabSaProt/saprot/config/pretrain/: saprot.yaml
ColabSaProt/saprot/dataset/: data_interface.py  lmdb_dataset.py  mutation_zeroshot_dataset.py
ColabSaProt/saprot/dataset/esm/: esm_classification_dataset.py  esm_contact_dataset.py  esm_ppi_dataset.py  esm_seq_design_dataset.py
ColabSaProt/saprot/model/: README.md  abstract_model.py
ColabSaProt/saprot/model/esm/: base.py  esm_annotation_model.py  esm_classification_model.py  esm_lm_model.py  esm_mutation_model.py  esm_ppi_model.py
ColabSaProt/saprot/scripts/: compute_clinvar_auc.py  mutation_zeroshot.py  training.py
ColabSaProt/saprot/utils/: esm_loader.py  lr_scheduler.py  module_loader.py  others.py
LMDB/: README.md
(+74 files in other folders)
